<resources>
    <string name="app_name">Workout Monitor</string>
    <string name="top_message">Are you ready? Bring it on!</string>
    <string name="button_setup">SETUP</string>
    <string name="button_WORKOUT">WORKOUT</string>
    <string name="button_history">HISTORY</string>
    <string name="button_exit">X</string>
    <string name="edit_message">Enter your name</string>
    <string name="inputParameters">Please introduce the following:</string>
    <string name="textQuote">It does not matter how slowly you go as long as you do not stop - Confucius</string>
    <string name="textWeight">Weight</string>
    <string name="textHeight">Height</string>
    <string name="textAge">Age</string>
    <string name="enterWeight">(Kg)</string>
    <string name="enterHeight">(cm)</string>
    <string name="enterAge">y.o.</string>
    <string name="buttonOk">OK</string>
    <string name="ready">All set to go!</string>
    <string name="tools_ignore_contentdescription">tools:ignore=ContentDescription</string>
    <string name="workoutHeadline">What do you want to do?</string>
    <string name="button_squat">Squat</string>
    <string name="button_plank">Plank</string>
    <string name="button_curls">Bicep curls</string>
    <string name="button_legraise">Leg raises</string>
    <string name="workout_low_text">Remember to breathe in deeply and stay hydrated!</string>
    <string name="setup_hello">Hello</string>
    <string name="exercise_headline">Let\'s shape that body!</string>
    <string name="exercise_start">Start</string>
    <string name="exercise_type">Pick your exercise type</string>
    <string name="button_exercise_start">Start</string>
    <string name="squat_classic">Classic</string>
    <string name="squat_plie">Plie</string>
    <string name="squat_weights">Weights</string>
    <string name="squat_stages">squat-stages</string>
    <string name="calories_burned">Calories burned</string>
    <string name="fire">fire</string>
    <string name="name">Name</string>
</resources>
