<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Squat">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="331dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/exercise_type"
        android:textAlignment="center"
        android:textSize="22sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="145dp"
        android:onClick="enterClassicSquat"
        android:text="@string/squat_classic"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="416dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="145dp"
        android:text="@string/squat_plie"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button10"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="145dp"
        android:text="@string/squat_weights"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

</android.support.constraint.ConstraintLayout>